# My-Road-to-Madness

./: Cargo.toml  README.md
Boid-Simulation_Rust/: Cargo.toml
Boid-Simulation_Rust/src/: main.rs
Conways-Game-of-Life/: Cargo.toml
Conways-Game-of-Life/src/: main.rs
Fractal-Simulator/: Cargo.toml
Fractal-Simulator/src/: fractal.rs  main.rs  mandelbrot.rs  pythagorean.rs  tiny5x7_font.incl  ui.rs
Gray-Scott/: Cargo.toml
Gray-Scott/src/: main.rs
LotkaVolterraRK4/: Cargo.toml
LotkaVolterraRK4/src/: main.rs
Matrixio/: BUILD_SUCCESS_REPORT.md  Cargo.toml  LICENSE  README.md  test_basic_functionality.rs
Matrixio/assets/shaders/: matrix_add.wgsl  matrix_multiply.wgsl
Matrixio/src/: main.rs
Matrixio/src/data/: import_export.rs  mod.rs  project.rs
Matrixio/src/gpu/: compute_shaders.rs  gpu_context.rs  mod.rs
Matrixio/src/matrix/: decomposition.rs  decomposition_broken.rs  decomposition_really_broken.rs  mod.rs  operations.rs  parallel.rs  parallel_old.rs  storage.rs
Matrixio/src/ui/: components.rs  matrix_editor.rs  mod.rs  mod_broken.rs  mod_complex.rs  operations_panel.rs  operations_panel_old.rs  results_viewer.rs
New-Gray-Scott/: Cargo.toml
New-Gray-Scott/src/: main.rs
blackhole-simulation/: Cargo.toml  PHYSICS_NOTES.md  README.md  SUPERNOTES.rs
blackhole-simulation/assets/shaders/: fragment.wgsl  vertex.wgsl
blackhole-simulation/src/: main.rs
blackhole-simulation/src/physics/: black_hole.rs  constants.rs  geodesics.rs  mod.rs  spacetime.rs
blackhole-simulation/src/rendering/: camera.rs  mod.rs  ray_tracer.rs  renderer.rs  shaders.rs  tiny5x7_font.incl
blackhole-simulation/src/simulation/: animation.rs  mod.rs  objects.rs  scene.rs
src/: main.rs
