[package]
name = "matrixio"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance matrix calculation software with intuitive UI"
license = "MIT"

[dependencies]
# Core linear algebra 
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = { version = "0.15" }

# GPU acceleration support
wgpu = { version = "0.20", optional = true }
bytemuck = { version = "1.14", features = ["derive"] }

# UI framework - using egui for fast, immediate mode GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["file"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Async and threading
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
num_cpus = "1.16"

# Math utilities
num-traits = "0.2"
num-complex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# File operations
rfd = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# GPU utilities
futures-intrusive = { version = "0.5", optional = true }

# Optional features for advanced functionality
[features]
default = []
gpu = ["wgpu", "futures-intrusive"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1